--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -46,8 +46,8 @@
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		accent:					#268b07,
-		accent-border:			desaturate(darken(#49fcd4, 8), 30),
-		accent-alt:				desaturate(darken(#49fcd4, 10), 20),
-		accent-bg:				transparentize(#49fcd4, 0.75)
+		accent:					#66ac3a,
+		accent-border:			desaturate(darken(#66ac3a, 8), 30),
+		accent-alt:				desaturate(darken(#66ac3a, 10), 20),
+		accent-bg:				transparentize(#66ac3a, 0.75)
 	);
