--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,14 +4,8 @@
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
-@import 'fontawesome-all.min.css';
+@import '../css/fontawesome-all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800');
-
-/*
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 // Breakpoints.
 
@@ -22,7 +16,7 @@
 		medium:    (737px,    1152px   ),
 		small:     (481px,    736px    ),
 		xsmall:    (361px,    480px    ),
-		xxsmall:   (null,     360px    )
+		xxsmall:   (null,     361px    )
 	));
 
 // Base.
