lots of cleanup, add sponsor page

--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -73,7 +73,7 @@
 
 								// Set width on all child elements and right-align.
 									> * {
-										width: (_size(header-width) - $pad);
+										// width: (_size(header-width) - $pad);
 									}
 
 								// Line.
