--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -17,7 +17,7 @@
 			'box-shadow #{_duration(transition)} ease-in-out',
 			'color #{_duration(transition)} ease-in-out'
 		));
-		background-color: transparent;
+		background-color: _palette(bg);
 		border-radius: _size(border-radius);
 		border: 0;
 		box-shadow: inset 0 0 0 2px _palette(border);
@@ -84,7 +84,7 @@
 		&.primary {
 			background-color: _palette(accent);
 			box-shadow: none;
-			color: _palette(fg-bold) !important;
+			color: _palette(bg) !important;
 
 			&:hover {
 				background-color: saturate(lighten(_palette(accent), 15), 10);
