--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -25,9 +25,9 @@
 
 // Font.
 	$font: (
-		family:					('Source Sans Pro', Helvetica, sans-serif),
+		family:					('Open Sanes', Helvetica, sans-serif),
 		family-fixed:			('Courier New', monospace),
-		family-heading:			('Raleway', Helvetica, sans-serif),
+		family-heading:			('Quicksand', Helvetica, sans-serif),
 		weight:					300,
 		weight-bold:			600,
 		weight-extrabold:		700,
@@ -41,13 +41,13 @@
 // Palette.
 	$palette: (
 		bg:						#ffffff,
-		fg:						#000000,
-		fg-bold:				#000000,
+		fg:						#003125,
+		fg-bold:				#003125,
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
 		accent:					#66ac3a,
-		accent-border:			desaturate(darken(#66ac3a, 8), 30),
-		accent-alt:				desaturate(darken(#66ac3a, 10), 20),
+		accent-border:			#003125,
+		accent-alt:				#003125,
 		accent-bg:				transparentize(#66ac3a, 0.75)
 	);
