--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -25,9 +25,9 @@
 
 // Font.
 	$font: (
-		family:					('Open Sanes', Helvetica, sans-serif),
+		family:					('Poppins', Helvetica, sans-serif),
 		family-fixed:			('Courier New', monospace),
-		family-heading:			('Quicksand', Helvetica, sans-serif),
+		family-heading:			('Play', Helvetica, sans-serif),
 		weight:					300,
 		weight-bold:			600,
 		weight-extrabold:		700,
