add images, update sponsors page

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -30,6 +30,7 @@
 	@import 'components/row';
 	@import 'components/box';
 	@import 'components/button';
+	@import 'components/helpers';
 	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
