--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1600,6 +1600,23 @@ button.small,
   }
 }
 
+.pl-0 {
+  padding-left: 0 !important;
+}
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.w-100 {
+  width: 100% !important;
+  max-width: 100%;
+}
+
 /* Form */
 form {
   margin: 0 0 2rem 0;
